[gd_scene format=3 uid="uid://c461rnyjdl6om"]

[ext_resource type="Script" uid="uid://cnj2rvd4m8web" path="res://scenes/map_objects/map_fog.gd" id="1_j4y02"]

[sub_resource type="FogMaterial" id="FogMaterial_cyt5c"]
albedo = Color(0.34796253, 0.59291714, 0.29631886, 1)

[sub_resource type="FogMaterial" id="FogMaterial_7x1jh"]
density = -8.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cyt5c"]
radius = 15.0

[node name="MapFog" type="FogVolume" unique_id=1947249419]
shape = 4
material = SubResource("FogMaterial_cyt5c")
script = ExtResource("1_j4y02")
shrink_amount = null
timer_time = null

[node name="SafeFog" type="FogVolume" parent="." unique_id=658012223]
size = Vector3(30, 10, 30)
shape = 2
material = SubResource("FogMaterial_7x1jh")

[node name="SafeZone" type="Area3D" parent="." unique_id=320941099]
collision_layer = 2

[node name="SafeShape" type="CollisionShape3D" parent="SafeZone" unique_id=41419069]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_cyt5c")

[node name="Timer" type="Timer" parent="." unique_id=1570859469]
autostart = true

[connection signal="body_entered" from="SafeZone" to="." method="_on_enter_fog_safety"]
[connection signal="body_exited" from="SafeZone" to="." method="_on_exit_fog_safety"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
